# Course_work_django

./: .env.sample  .gitignore  README.md  groups.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_views.py  0003_alter_blogpost_options_blogpost_user.py  0004_alter_blogpost_options.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
client/: forms.py  models.py  services.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_owner.py  0003_alter_client_owner.py
client/templates/client/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_rename_recipients_mailingsettings_clients.py  0003_rename_mailing_list_mailingstatus_mailing_and_more.py  0004_alter_mailingsettings_options.py  0005_alter_mailingmessage_owner_and_more.py  0006_mailingsettings_next_datetime.py
mailing/templates/mailing/: home.html  mailingmessage_confirm_delete.html  mailingmessage_detail.html  mailingmessage_form.html  mailingmessage_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  mailingstatus_detail.html  mailingstatus_list.html
users/: forms.py  models.py  urls.py  views.py
(+1 files in other folders)
