[tool.poetry]
name = "Course_work_django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.25.0"
python-dotenv = "^1.0.1"
black = "^24.4.2"
pytz = "^2024.1"
apscheduler = "^3.10.4"
django-apscheduler = "^0.6.2"
pytils = "^0.4.1"
redis = "^5.0.6"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"